--- a/app.json
+++ b/app.json
@@ -28,11 +28,11 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "static",
+      "output": "server",
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
+      [ "expo-router", { "origin": "https://localhost:5500/" } ],
       "expo-secure-store"
     ],
     "experiments": {
