--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "@clerk/clerk-expo": "^1.0.5",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "@shopify/react-native-skia": "^1.2.3",
+    "@tanstack/react-query": "^5.35.1",
+    "date-fns": "^3.6.0",
     "expo": "~50.0.17",
     "expo-asset": "~9.0.2",
     "expo-av": "~13.10.6",
+    "expo-blur": "~12.9.2",
     "expo-dev-client": "~3.3.11",
     "expo-font": "~11.10.3",
+    "expo-haptics": "~12.8.1",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.10",
     "expo-secure-store": "~12.8.1",
@@ -40,9 +45,9 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
+    "victory-native": "^40.2.0",
     "zeego": "^1.10.0",
-    "zustand": "^4.5.2",
-    "expo-blur": "~12.9.2"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
