--- a/app.json
+++ b/app.json
@@ -17,14 +17,21 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "pro.idear.demofintech"
+      "bundleIdentifier": "pro.idear.demofintech",
+      "infoPlist": {
+        "NSFaceIDUsageDescription": "Allow $(PRODUCT_NAME) to use Face ID"
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "pro.idear.demofintech"
+      "package": "pro.idear.demofintech",
+      "permissions": [
+        "android.permission.USE_BIOMETRIC",
+        "android.permission.USE_FINGERPRINT"
+      ]
     },
     "web": {
       "bundler": "metro",
@@ -32,11 +39,31 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      [ "expo-router", { "origin": "https://localhost:5500/" } ],
-      "expo-secure-store"
+      [
+        "expo-router",
+        {
+          "origin": "https://localhost:5500/"
+        }
+      ],
+      "expo-secure-store",
+      [
+        "expo-local-authentication",
+        {
+          "faceIdPermission": "Allow $(PRODUCT_NAME) to use Face ID."
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": "https://localhost:5500/"
+      },
+      "eas": {
+        "projectId": "993037a2-df2c-46ed-9c4f-bbe93892629a"
+      }
+    },
+    "owner": "erikchacon"
   }
 }
