--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "react-native-web": "~0.19.6",
     "victory-native": "^40.2.0",
     "zeego": "^1.10.0",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "expo-local-authentication": "~13.8.0",
+    "expo-image-picker": "~14.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
