--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@shopify/react-native-skia": "^1.2.3",
     "@tanstack/react-query": "^5.35.1",
     "date-fns": "^3.6.0",
-    "expo": "~51.0.4",
+    "expo": "^51.0.5",
     "expo-asset": "~10.0.6",
     "expo-av": "~14.0.4",
     "expo-blur": "~13.0.2",
@@ -31,7 +31,7 @@
     "expo-image-picker": "~15.0.4",
     "expo-linking": "~6.3.1",
     "expo-local-authentication": "~14.0.1",
-    "expo-router": "^3.5.11",
+    "expo-router": "3.5.12",
     "expo-secure-store": "~13.0.1",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
